--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "test:e2e": "jest --config ./tests/jest-e2e.json",
     "prebuild": "rimraf dist",
     "prepare": "husky install",
-    "pre-commit-lint": "yarn check-types && yarn lint-staged && yarn lint"
+    "pre-commit-lint": "yarn check-types && yarn lint-staged && yarn lint",
+    "db:migrate": "./node_modules/.bin/sequelize db:migrate",
+    "db:migrate:undo": "./node_modules/.bin/sequelize db:migrate:undo",
+    "db:seed": "./node_modules/.bin/sequelize db:seed:all"
   },
   "dependencies": {
     "@nestjs/common": "~7.6.18",
@@ -80,6 +83,7 @@
     "lint-staged": "~11.0.0",
     "prettier": "~2.3.1",
     "rimraf": "~3.0.2",
+    "sequelize-cli": "6.2.0",
     "superagent": "~6.1.0",
     "supertest": "~6.1.3",
     "ts-jest": "~27.0.3",
