update package.json & readme

--- a/package.json
+++ b/package.json
@@ -1,7 +1,27 @@
 {
-  "name": "base-services",
+  "name": "nestjs-squelize-typescript",
   "version": "1.0.0",
-  "description": "",
+  "description": "Nest.js + sequlize.js + typescript + jwt + postgresql + fastify",
+  "keywords": [
+    "nest",
+    "nest-fastify",
+    "nestjs",
+    "nest.js",
+    "nest.js jwt",
+    "nest.js json web token",
+    "sequelize",
+    "sequelize-typescript",
+    "orm",
+    "nodejs",
+    "node.js",
+    "node",
+    "typescript",
+    "jwt",
+    "jsonwebtoken",
+    "jest",
+    "husky",
+    "nest github"
+  ],
   "author": "TaiPham",
   "license": "MIT",
   "scripts": {
@@ -49,7 +69,6 @@
     "lodash": "~4.17.21",
     "passport": "~0.4.1",
     "passport-jwt": "~4.0.0",
-    "passport-local": "~1.0.0",
     "pg": "~8.6.0",
     "reflect-metadata": "~0.1.13",
     "sequelize": "~6.6.2",
@@ -66,7 +85,6 @@
     "@types/jest": "~26.0.23",
     "@types/node": "~15.12.2",
     "@types/passport-jwt": "~3.0.5",
-    "@types/passport-local": "~1.0.33",
     "@types/sequelize": "~4.28.9",
     "@types/supertest": "~2.0.11",
     "@typescript-eslint/eslint-plugin": "~4.27.0",
