--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,14 @@ NODE_ENV=development
 DB_DIALECT=postgres
 DB_USER=postgres
 DB_PASSWORD=postgres
-DB_NAME=postgres
+DB_NAME=language
 DB_HOST=127.0.0.1
 DB_PORT=5432
-JWT_ID=jsonwebtoken
-JWT_KEY=seretKey
-FOLDER_UPLOAD=uploads
+SECRET_TOKEN=jsonwebtoken
+EXPIRESIN_ACCESS_TOKEN=5m
+EXPIRESIN_REFRESH_TOKEN=15m
 RATE_LIMIT_TIME_WINDOW=30000
 RATE_LIMIT_MAX=100
 DEFAULT_LIMIT_PAGE=10
 SERVICE_PORT=3001
-SERVICE_NAME=localhost
+SERVICE_NAME='0.0.0.0'
