:art: :hammer: :heavy_minus_sign: :heavy_plus_sign: :chart_with_upwards_trend: :ok_hand: :tada: :tada: :tada:

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -2,7 +2,7 @@
   "src/**/*.+(js|json|ts)": [
     "eslint"
   ],
-  "src/**/*.{js,ts,json,md}": [
+  "src/**/*.{js,ts,json}": [
     "prettier --write"
   ]
 }
