--- a/.sequelizerc
+++ b/.sequelizerc
@@ -2,6 +2,6 @@ const path = require('path');
 
 module.exports = {
   'config': path.resolve('db', 'config.ts'),
-  'seeders-path': path.resolve('db', 'seeders-dev'),
+  'seeders-path': path.resolve('db', 'seeders'),
   'migrations-path': path.resolve('db', 'migrations')
 }
