--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "TaiPham",
   "license": "MIT",
   "scripts": {
+    "check-types": "tsc",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -33,7 +34,6 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,scripts,test}/**/*.ts\" --fix",
     "test": "jest",
-    "check-types": "tsc",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -89,7 +89,7 @@
     "@types/supertest": "~2.0.11",
     "@typescript-eslint/eslint-plugin": "~4.27.0",
     "@typescript-eslint/parser": "~4.27.0",
-    "axios": "0.21.1",
+    "axios": "~0.21.1",
     "commitlint": "~12.1.4",
     "cross-env": "~7.0.3",
     "eslint": "~7.28.0",
@@ -101,7 +101,7 @@
     "lint-staged": "~11.0.0",
     "prettier": "~2.3.1",
     "rimraf": "~3.0.2",
-    "sequelize-cli": "6.2.0",
+    "sequelize-cli": "~6.2.0",
     "superagent": "~6.1.0",
     "supertest": "~6.1.3",
     "ts-jest": "~27.0.3",
