--- a/package.json
+++ b/package.json
@@ -1,26 +1,16 @@
 {
-  "name": "nestjs-squelize-typescript",
-  "version": "1.0.0",
-  "description": "Nest.js + sequlize.js + typescript + jwt + postgresql + fastify",
+  "name": "nestjs-starter",
+  "version": "0.1.1",
+  "description": "Get started for beginners with Nestjs",
   "keywords": [
+    "starter-nestjs",
+    "beginner-nestjs",
+    "nestjs-starter",
     "nest",
     "nest-fastify",
     "nestjs",
     "nest.js",
-    "nest.js jwt",
-    "nest.js json web token",
-    "sequelize",
-    "sequelize-typescript",
-    "orm",
-    "nodejs",
-    "node.js",
-    "node",
-    "typescript",
-    "jwt",
-    "jsonwebtoken",
-    "jest",
-    "husky",
-    "nest github"
+    "nest.js jwt"
   ],
   "author": "TaiPham",
   "license": "MIT",
