:art: :art: :zap: :zap: :hammer: :hammer:

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "check-types": "tsc",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
