--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ NODE_ENV=development
 
 DB_DIALECT=postgres
 DB_USER=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=1234567
 DB_NAME=language
 DB_HOST=127.0.0.1
 DB_PORT=5432
@@ -11,9 +11,12 @@ SECRET_TOKEN=jsonwebtoken
 EXPIRESIN_ACCESS_TOKEN=5m
 EXPIRESIN_REFRESH_TOKEN=15m
 
+WHITE_LIST='http://localhost:3001,https://abc.com'
+FOLDER_UPLOAD=uploads
+
 RATE_LIMIT_TIME_WINDOW=30000
 RATE_LIMIT_MAX=100
-DEFAULT_LIMIT_PAGE=10
 
+DEFAULT_LIMIT_PAGE=10
 SERVICE_PORT=3001
 SERVICE_NAME='0.0.0.0'
