--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "check-types": "tsc",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "start": "nest start",
+    "start": "node dist/main",
     "start:dev": "nest start --watch",
+    "worker": "node dist/main",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,scripts,test}/**/*.ts\" --fix",
