--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "check-types": "tsc",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "start": "yarn build && node dist/main",
+    "start": "nest start",
     "start:dev": "nest start --watch",
-    "worker": "yarn build && node dist/main",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,scripts,test}/**/*.ts\" --fix",
