--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "pre-commit-lint": "yarn check-types && yarn lint-staged && yarn lint",
     "db:migrate": "./node_modules/.bin/sequelize db:migrate",
     "db:migrate:undo": "./node_modules/.bin/sequelize db:migrate:undo",
-    "db:seed": "./node_modules/.bin/sequelize db:seed:all"
+    "db:seed": "./node_modules/.bin/sequelize db:seed:all",
+    "heroku-postbuild": "yarn build"
   },
   "dependencies": {
     "@nestjs/common": "~7.6.18",
