--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main.js",
+    "start:prod": "node dist/src/main.js",
     "lint": "eslint \"{src,scripts,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
