--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/config": "~0.6.3",
     "@nestjs/core": "~7.6.18",
     "@nestjs/jwt": "~7.2.0",
+    "@nestjs/mongoose": "^8.0.1",
     "@nestjs/passport": "~7.1.5",
     "@nestjs/platform-express": "~7.6.18",
     "@nestjs/platform-fastify": "~7.6.18",
@@ -55,6 +56,7 @@
     "fastify-rate-limit": "~5.5.0",
     "fastify-swagger": "~4.7.0",
     "lodash": "~4.17.21",
+    "mongoose": "^6.0.3",
     "passport": "~0.4.1",
     "passport-jwt": "~4.0.0",
     "pg": "~8.6.0",
