--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,19 @@
 NODE_ENV=development
-
 DB_DIALECT=postgres
 DB_USER=postgres
-DB_PASSWORD=1234567
+DB_PASSWORD=123456
 DB_NAME=language
 DB_HOST=127.0.0.1
 DB_PORT=5432
-
 SECRET_TOKEN=jsonwebtoken
 EXPIRESIN_ACCESS_TOKEN=5m
 EXPIRESIN_REFRESH_TOKEN=15m
-
 WHITE_LIST='http://localhost:3001,https://abc.com'
+METHOD='GET,HEAD,PUT,PATCH,POST,DELETE'
 FOLDER_UPLOAD=uploads
-
 RATE_LIMIT_TIME_WINDOW=30000
-RATE_LIMIT_MAX=100
-
+RATE_LIMIT_MAX=100000
 DEFAULT_LIMIT_PAGE=10
 SERVICE_PORT=3001
-SERVICE_NAME='0.0.0.0'
+SERVICE_NAME=localhost
+MONGO_DB=mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false
